nullaway_error_38914F04-3AE4-448F-BF03-3AF208ED4392.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-webflux/src/main/java/org/springframework/web/reactive/result/method/AbstractHandlerMethodMapping.java:639: error: [NullAway] assigning @Nullable expression to @NonNull field
			this.registration = registration;
			                  ^
    (see http://t.uber.com/nullaway )
